# sdev265-group4

./: .gitignore  .gitmessage.txt  Detailed_Dev_SETUP.md  README.md  SETUP.md  main.py  pyproject.toml  run.bat
.git-hooks/: commit-msg.disabled
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
events/: forms.py  models.py  urls.py  views.py
events/management/commands/: seed_test_data.py
events/migrations/: 0001_initial.py  0002_seed_categories.py
events/templates/events/: event_create.html  event_detail.html  event_details.html  event_edit.html  event_list.html
events/templatetags/: event_tags.py
templates/: base.html
